application/brennoflavio/home-whisper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-whisper
  namespace: home-whisper
spec:
  type: ClusterIP
  selector:
    app: home-whisper
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
